--- a/Roller Coaster/AppMain.ui
+++ b/Roller Coaster/AppMain.ui
@@ -52,6 +52,9 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QVBoxLayout" name="mainLayout">
+      <property name="spacing">
+       <number>6</number>
+      </property>
       <property name="sizeConstraint">
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
@@ -104,13 +107,13 @@
         <property name="minimumSize">
          <size>
           <width>120</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>200</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="font">
@@ -140,7 +143,7 @@ border-radius: 5px;</string>
            <x>10</x>
            <y>40</y>
            <width>96</width>
-           <height>96</height>
+           <height>50</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -211,13 +214,13 @@ QComboBox QAbstractItemView {
         <property name="minimumSize">
          <size>
           <width>120</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>200</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="font">
@@ -244,7 +247,7 @@ border-radius: 5px;</string>
            <x>10</x>
            <y>40</y>
            <width>96</width>
-           <height>96</height>
+           <height>50</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -315,13 +318,13 @@ QComboBox QAbstractItemView {
         <property name="minimumSize">
          <size>
           <width>120</width>
-          <height>120</height>
+          <height>100</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>200</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="font">
@@ -348,7 +351,7 @@ border-radius: 5px;</string>
            <x>10</x>
            <y>40</y>
            <width>96</width>
-           <height>96</height>
+           <height>50</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -422,13 +425,13 @@ QComboBox QAbstractItemView {
         <property name="minimumSize">
          <size>
           <width>120</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>200</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="font">
@@ -454,8 +457,8 @@ border-radius: 5px;</string>
           <rect>
            <x>10</x>
            <y>40</y>
-           <width>96</width>
-           <height>96</height>
+           <width>100</width>
+           <height>50</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -506,13 +509,13 @@ QPushButton:pressed {
         <property name="minimumSize">
          <size>
           <width>120</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>200</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="font">
@@ -551,7 +554,7 @@ border-radius: 5px;</string>
            <x>10</x>
            <y>40</y>
            <width>100</width>
-           <height>44</height>
+           <height>22</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -599,9 +602,9 @@ QPushButton:pressed {
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>90</y>
+           <y>70</y>
            <width>100</width>
-           <height>44</height>
+           <height>22</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -661,13 +664,13 @@ QPushButton:pressed {
         <property name="minimumSize">
          <size>
           <width>120</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>200</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="palette">
@@ -791,7 +794,7 @@ border-radius: 5px;</string>
            <x>10</x>
            <y>40</y>
            <width>100</width>
-           <height>44</height>
+           <height>22</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -831,9 +834,9 @@ QPushButton:pressed {
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>90</y>
+           <y>70</y>
            <width>100</width>
-           <height>44</height>
+           <height>22</height>
           </rect>
          </property>
          <property name="styleSheet">
@@ -857,6 +860,9 @@ QPushButton:pressed {
            <normaloff>:/AppMain/mdelete.png</normaloff>:/AppMain/mdelete.png</iconset>
          </property>
         </widget>
+        <zorder>rcpxadd</zorder>
+        <zorder>rcpxsub</zorder>
+        <zorder>groupBox_2</zorder>
        </widget>
       </item>
       <item>
@@ -864,13 +870,13 @@ QPushButton:pressed {
         <property name="minimumSize">
          <size>
           <width>120</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>200</width>
-          <height>150</height>
+          <height>100</height>
          </size>
         </property>
         <property name="font">
@@ -894,7 +900,7 @@ border-radius: 5px;</string>
            <x>10</x>
            <y>40</y>
            <width>100</width>
-           <height>44</height>
+           <height>22</height>
           </rect>
          </property>
          <property name="sizePolicy">
@@ -928,9 +934,9 @@ QPushButton:pressed {
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>90</y>
+           <y>70</y>
            <width>100</width>
-           <height>44</height>
+           <height>22</height>
           </rect>
          </property>
          <property name="styleSheet">
@@ -1035,6 +1041,406 @@ QPushButton:pressed {
          <size>
           <width>0</width>
           <height>0</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <spacer name="horizontalSpacer_5">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupControl">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <family>Comic Sans MS</family>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(249, 249, 249);
+border-radius: 5px;</string>
+        </property>
+        <property name="title">
+         <string>Control</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+        <widget class="QCheckBox" name="XZPlane">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>40</y>
+           <width>100</width>
+           <height>44</height>
+          </rect>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <family>Comic Sans MS</family>
+           <pointsize>10</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"> QCheckBox {
+	background-color: rgb(80, 80, 80);
+	color: rgb(240, 240, 240);
+    border-radius: 10px;
+}
+
+QCheckBox:pressed {
+	background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0 rgba(172, 172, 172, 255), stop:1 rgba(0, 0, 0, 203));
+     padding-top: 10px;
+     padding-left: 5px;
+}</string>
+         </property>
+         <property name="text">
+          <string>XZ Plane</string>
+         </property>
+        </widget>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupArc">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <family>Comic Sans MS</family>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(249, 249, 249);
+border-radius: 5px;</string>
+        </property>
+        <property name="title">
+         <string>Arc Length</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+        <widget class="QCheckBox" name="ArcLength">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>40</y>
+           <width>100</width>
+           <height>44</height>
+          </rect>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <family>Comic Sans MS</family>
+           <pointsize>10</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"> QCheckBox {
+	background-color: rgb(80, 80, 80);
+	color: rgb(240, 240, 240);
+    border-radius: 10px;
+}
+
+QCheckBox:pressed {
+	background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0 rgba(172, 172, 172, 255), stop:1 rgba(0, 0, 0, 203));
+     padding-top: 10px;
+     padding-left: 5px;
+}</string>
+         </property>
+         <property name="text">
+          <string>Arc Length</string>
+         </property>
+        </widget>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupTerrain">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <family>Comic Sans MS</family>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(249, 249, 249);
+border-radius: 5px;</string>
+        </property>
+        <property name="title">
+         <string>Terrain</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+        <widget class="QCheckBox" name="Terrain">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>40</y>
+           <width>100</width>
+           <height>44</height>
+          </rect>
+         </property>
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="font">
+          <font>
+           <family>Comic Sans MS</family>
+           <pointsize>10</pointsize>
+           <weight>75</weight>
+           <bold>true</bold>
+          </font>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"> QCheckBox {
+	background-color: rgb(80, 80, 80);
+	color: rgb(240, 240, 240);
+    border-radius: 10px;
+}
+
+QCheckBox:pressed {
+	background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:0.5, fx:0.5, fy:0.5, stop:0 rgba(172, 172, 172, 255), stop:1 rgba(0, 0, 0, 203));
+     padding-top: 10px;
+     padding-left: 5px;
+}</string>
+         </property>
+         <property name="text">
+          <string>Terrain</string>
+         </property>
+        </widget>
+        <zorder>Terrain</zorder>
+        <zorder>groupArc</zorder>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBox_3">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(249, 249, 249);
+border-radius: 5px;</string>
+        </property>
+        <property name="title">
+         <string>GroupBox</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBox_4">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(249, 249, 249);
+border-radius: 5px;</string>
+        </property>
+        <property name="title">
+         <string>GroupBox</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBox_5">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(249, 249, 249);
+border-radius: 5px;</string>
+        </property>
+        <property name="title">
+         <string>GroupBox</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QGroupBox" name="groupBox_6">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>200</width>
+          <height>100</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(249, 249, 249);
+border-radius: 5px;</string>
+        </property>
+        <property name="title">
+         <string>GroupBox</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_6">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
          </size>
         </property>
        </spacer>
@@ -1212,6 +1618,11 @@ QPushButton:pressed {
    </property>
    <property name="text">
     <string>Road</string>
+   </property>
+  </action>
+  <action name="aControl">
+   <property name="text">
+    <string>PlaneControl</string>
    </property>
   </action>
  </widget>
